UI优化 准备添加数据统计

--- a/app/src/main/res/layout/layout_lottery_item.xml
+++ b/app/src/main/res/layout/layout_lottery_item.xml
@@ -2,10 +2,86 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_gravity="center">
+                android:orientation="horizontal"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/dp_5"
+                android:background="@drawable/list_item_shape">
 
-            <TextView
+
+
+    <TextView
+        android:id="@+id/list_item_red1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textSize="20sp"
+        android:textColor="@color/colorAccent"
+        android:padding="@dimen/dp_10"
+        android:fontFamily="sans-serif-smallcaps"
+        />
+    <TextView
+        android:id="@+id/list_item_red2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textSize="20sp"
+        android:textColor="@color/colorAccent"
+        android:padding="@dimen/dp_10"
+        android:fontFamily="sans-serif-smallcaps"
+        />
+    <TextView
+        android:id="@+id/list_item_red3"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textSize="20sp"
+        android:textColor="@color/colorAccent"
+        android:padding="@dimen/dp_10"
+        android:fontFamily="sans-serif-smallcaps"
+        />
+    <TextView
+        android:id="@+id/list_item_red4"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textSize="20sp"
+        android:textColor="@color/colorAccent"
+        android:padding="@dimen/dp_10"
+        android:fontFamily="sans-serif-smallcaps"
+        />
+    <TextView
+        android:id="@+id/list_item_red5"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textSize="20sp"
+        android:textColor="@color/colorAccent"
+        android:padding="@dimen/dp_10"
+        android:fontFamily="sans-serif-smallcaps"
+        />
+    <TextView
+        android:id="@+id/list_item_red6"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textSize="20sp"
+        android:textColor="@color/colorAccent"
+        android:padding="@dimen/dp_10"
+        android:fontFamily="sans-serif-smallcaps"
+        />
+    <TextView
+        android:id="@+id/list_item_red7"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textSize="20sp"
+        android:textColor="@color/colorPrimary"
+        android:padding="@dimen/dp_10"
+        android:fontFamily="sans-serif-smallcaps"
+        />
+
+
+            <!--<TextView
                 android:id="@+id/tv_red"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -24,6 +100,6 @@
                 android:text="05"
                 android:gravity="right"
                 android:fontFamily="sans-serif-smallcaps"
-                />
+                />-->
 
 </LinearLayout>
