--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,33 +16,20 @@
         android:orientation="horizontal"
         android:gravity="center"
         android:background="@color/colorPrimary">
-
-       <TextView
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:text="@string/title"
-           android:textSize="18sp"
-           android:textColor="@android:color/white"/>
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/title"
+            android:textSize="18sp"
+            android:textColor="@android:color/white"/>
     </LinearLayout>
 
-<android.support.v4.widget.SwipeRefreshLayout
-    android:id="@+id/main_swiperefreshlayout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_below="@+id/main_title">
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/main_list"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/main_viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </android.support.v7.widget.RecyclerView>
-
-</android.support.v4.widget.SwipeRefreshLayout>
-
-
-
-
-
+        android:layout_height="match_parent"
+        android:layout_below="@+id/main_title">
+    </android.support.v4.view.ViewPager>
 
 
 </RelativeLayout>
