--- a/app/src/main/res/drawable/list_item_shape.xml
+++ b/app/src/main/res/drawable/list_item_shape.xml
@@ -3,11 +3,13 @@
     <item android:right="0dp" >
         <shape android:shape="rectangle" >
             <solid android:color="@android:color/holo_green_dark" />
+            <corners android:radius="@dimen/dp_10"/>
         </shape>
     </item>
     <item android:right="1dp" android:top="1dp" android:left="1dp" android:bottom="1dp">
         <shape android:shape="rectangle" >
             <solid android:color="@android:color/darker_gray" />
+            <corners android:radius="@dimen/dp_10"/>
         </shape>
     </item>
 
