--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,28 +8,24 @@
     tools:context="com.android.zhuzhiwei.lottery.activity.MainActivity"
     android:background="@android:color/white">
 
-
-    <LinearLayout
-        android:id="@+id/main_title"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:background="@color/colorPrimary">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/title"
-            android:textSize="18sp"
-            android:textColor="@android:color/white"/>
-    </LinearLayout>
-
     <android.support.v4.view.ViewPager
         android:id="@+id/main_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/main_title">
+        >
     </android.support.v4.view.ViewPager>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/main_clear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        app:backgroundTint="@android:color/white"
+        app:rippleColor="@android:color/white"
+        app:elevation="2dp"
+        android:src="@mipmap/ic_delete"
+        android:layout_margin="@dimen/dp_72"/>
 
 
 </RelativeLayout>
