--- a/app/src/main/res/layout/fragment_lotterylist.xml
+++ b/app/src/main/res/layout/fragment_lotterylist.xml
@@ -5,6 +5,24 @@
               android:layout_height="match_parent">
 
 
+
+    <LinearLayout
+        android:id="@+id/main_title"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:background="@color/colorPrimary">
+        <TextView
+            android:id="@+id/fragment_list_tvtip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/title"
+            android:textSize="18sp"
+            android:textColor="@android:color/white"/>
+    </LinearLayout>
+
+
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/fragment_list_swiperefreshlayout"
         android:layout_width="match_parent"
